# openglottal

./: .gitignore  FILE_EVALUATION.md  LICENSE  OPEN_SOURCE_READINESS.md  README.md  REPO_EVALUATION.md  pyproject.toml  run
configs/: default.yaml
openglottal/: __init__.py  cli.py  data.py  features.py  utils.py
openglottal/models/: __init__.py  detector.py  tracker.py  unet.py
paper/: fig1_pipeline.mmd  latexmkrc  main.bbl  main.tex  refs.bib
results/: bagls_eval.json
results/gaw/: gaw_features.json
scripts/: analyze_gaw.py  benchmark_video_speed.py  download_datasets.py  eval_bagls.py  eval_girafe.py  fig_bagls_sweep.py  fig_gaw_examples.py  generate_demo_videos.py  infer.py  make_montage.py  plot_gaw.py  prepare_bagls_splits.py  prepare_girafe_splits.py  sweep_bagls_conf.py  train_unet.py  train_unet_crop.py  train_yolo.py
